<resources>
    <string name="app_name">Envirometrics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_mapa">Mapa</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_tools">Ajustes</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="envirometrics">Envirometrics</string>
    <string name="cerrar_sesion">Cerrar sesión</string>

    <string name="google_maps_key">AIzaSyAgkN-hpzsWKExY1_y1iyZLobI2012vi1k</string>
    <string name="title_activity_ajustes">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="resumen_diario">Resumen diario</string>

</resources>
