<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_mapa"
            android:title="@string/menu_mapa" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_resumen_dia"
            android:icon="@drawable/ic_resumen"
            android:title="@string/resumen_diario" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="Información gases" />
        <item
            android:id="@+id/nav_QR"
            android:icon="@drawable/ic_codigo_qr"
            android:drawableTint="#FFFFFF"
            android:title="Escaner QR" />
    </group>

    <group android:id="@+id/group2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@drawable/ic_cerrar_sesion"
            android:title="@string/cerrar_sesion" />
    </group>

</menu>
